fix v2ray config error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     container_name: breakwall_v2ray
     restart: always
     volumes:
+      - ./v2ray/config.json:/etc/v2ray/config.json
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
 
