v2ray: move install script to fhs-install-v2ray

--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu:19.10 as builder
 
 RUN apt-get update
-RUN apt-get install curl -y
-RUN curl -L -o /tmp/go.sh https://install.direct/go.sh
+RUN apt-get install curl init -y
+RUN curl -L -o /tmp/go.sh https://raw.githubusercontent.com/v2fly/fhs-install-v2ray/master/install-release.sh
 RUN chmod +x /tmp/go.sh
 RUN /tmp/go.sh
 
@@ -10,10 +10,10 @@ FROM alpine:latest
 
 LABEL maintainer "Darian Raymond <admin@v2ray.com>"
 
-COPY --from=builder /usr/bin/v2ray/v2ray /usr/bin/v2ray/
-COPY --from=builder /usr/bin/v2ray/v2ctl /usr/bin/v2ray/
-COPY --from=builder /usr/bin/v2ray/geoip.dat /usr/bin/v2ray/
-COPY --from=builder /usr/bin/v2ray/geosite.dat /usr/bin/v2ray/
+COPY --from=builder /usr/local/bin/v2ray /usr/bin/v2ray/
+COPY --from=builder /usr/local/bin/v2ctl /usr/bin/v2ray/
+COPY --from=builder /usr/local/share/v2ray/geoip.dat /usr/bin/v2ray/
+COPY --from=builder /usr/local/share/v2ray/geosite.dat /usr/bin/v2ray/
 # COPY config.json /etc/v2ray/config.json
 
 RUN set -ex && \
