--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -3,6 +3,8 @@ abc.com {
 
 :81 {
     encode gzip
+    root * /usr/share/caddy
+    file_server
     reverse_proxy * https://baidu.com
     reverse_proxy /ray 127.0.0.1:10000
 }
