--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -5,6 +5,6 @@ abc.com {
     encode gzip
     root * /usr/share/caddy
     file_server
-    reverse_proxy * https://baidu.com
-    reverse_proxy /ray 127.0.0.1:10000
+    reverse_proxy * baidu.com
+    reverse_proxy /ray v2ray:10000
 }
