--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -2,7 +2,7 @@
   "inbound": {
     "port": 10000,
     "listen":"0.0.0.0",
-    "protocol": "vmess",
+    "protocol": "vless",
     "settings": {
       "clients": [
         {
