Change Trojan to Trojan-Go (support mux)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,13 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   trojan:
-      build: ./trojan
+      image: p4gefau1t/trojan-go
       container_name: breakwall_trojan
       restart: always
       ports:
         - "443:443"
       volumes:
-        - ./trojan/config:/config
+        - ./trojan/config:/etc/trojan-go
         - ./caddy/caddy_cert:/trojan-cert
         - ./trojan/wait_for_caddy.sh:/wait_for_caddy.sh
         - /etc/localtime:/etc/localtime:ro
